--- a/OventinTS/package.json
+++ b/OventinTS/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.28.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-draggable": "^4.5.0",
     "react-router-dom": "^7.9.6",
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.6"
