--- a/OventinTS/package.json
+++ b/OventinTS/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
+    "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/cli": "^4.1.17",
     "@tailwindcss/vite": "^4.1.17",
     "antd": "^5.28.1",
@@ -21,9 +22,11 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-draggable": "^4.5.0",
+    "react-hook-form": "^7.68.0",
     "react-router-dom": "^7.9.6",
     "react-sortablejs": "^6.1.4",
-    "sortablejs": "^1.15.6"
+    "sortablejs": "^1.15.6",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
