--- a/OventinTS/vercel.json
+++ b/OventinTS/vercel.json
@@ -1,4 +1,5 @@
-// {
+// Dùng khi vercel gặp lỗi 404 điều hướng, chỉ xảy ra khi xài browserRouter => nên thay bằng HashRouter hoặc file này
+// { 
 //   "rewrites": [
 //     {
 //       "source": "/(.*)",
