--- a/OventinTS/package.json
+++ b/OventinTS/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/cli": "^4.1.17",
     "@tailwindcss/vite": "^4.1.17",
     "antd": "^5.28.1",
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
