--- a/OventinTS/package.json
+++ b/OventinTS/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^44.3.0",
+    "@ckeditor/ckeditor5-react": "^11.0.1",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
@@ -20,8 +22,8 @@
     "antd": "^5.28.1",
     "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-draggable": "^4.5.0",
     "react-hook-form": "^7.68.0",
     "react-router-dom": "^7.9.6",
